--- a/chameera_silva/readme
+++ b/chameera_silva/readme
@@ -1,2 +1,4 @@
+2022-10-08
+# attempt 01 #
 This is a test model for check how rising two plume change extensinal setting into compressional setting. velocity vectors are drawn
-input file name : 'free_surface.prm.\'
+input file name : 'free_surface.prm.'
